RESOLVED FIXED102271
[CF]: XMLHttpRequest "timeout" events firing as "error" events
https://bugs.webkit.org/show_bug.cgi?id=102271
Summary [CF]: XMLHttpRequest "timeout" events firing as "error" events
Joseph Pecoraro
Reported 2012-11-14 12:37:09 PST
When USE(CFNETWORK) timeout ResourceErrors are not being marked timeouts. Init the timeout flag in the USE(CFNETWORK) side of ResourceError just like: <http://webkit.org/b/99478> Init timeout flag in ResourceErrorMac Patch to follow.
Attachments
[PATCH] Proposed Fix (1.99 KB, patch)
2012-11-14 12:41 PST, Joseph Pecoraro
no flags
Joseph Pecoraro
Comment 1 2012-11-14 12:37:51 PST
Joseph Pecoraro
Comment 2 2012-11-14 12:41:43 PST
Created attachment 174229 [details] [PATCH] Proposed Fix Do the same as the r131499: <http://trac.webkit.org/changeset/131499> but for the USE(CFNETWORK) ResourceError constructors.
Alexey Proskuryakov
Comment 3 2012-11-14 13:41:24 PST
Isn't this a duplicate of bug 100349?
Alexey Proskuryakov
Comment 4 2012-11-14 13:42:55 PST
The patch looks good to me, but the same change has been found to not work in practice in bug 100349.
Joseph Pecoraro
Comment 5 2012-11-14 16:52:45 PST
Hmm, this does look identical. I can't explain why it doesn't fix the Windows bots. It fixed these tests on the iOS port.
David Kilzer (:ddkilzer)
Comment 6 2012-11-14 17:05:05 PST
(In reply to comment #4) > The patch looks good to me, but the same change has been found to not work in practice in bug 100349. Has anyone run the test on Windows to find out what error code it is returning in this case? If it works on iOS, then perhaps there is a bug in the Windows port of CFNetwork.
David Kilzer (:ddkilzer)
Comment 7 2012-11-14 17:07:57 PST
Comment on attachment 174229 [details] [PATCH] Proposed Fix r=me
WebKit Review Bot
Comment 8 2012-11-14 17:31:04 PST
Comment on attachment 174229 [details] [PATCH] Proposed Fix Clearing flags on attachment: 174229 Committed r134702: <http://trac.webkit.org/changeset/134702>
WebKit Review Bot
Comment 9 2012-11-14 17:31:08 PST
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 10 2012-11-14 19:49:44 PST
*** Bug 100349 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.