[CF]: XMLHttpRequest "timeout" events firing as "error" events https://bugs.webkit.org/show_bug.cgi?id=102271

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2012-11-14
Reviewed by David Kilzer.

Initialize the tiemout flag if the error results from a timeout
in the USE(CFNETWORK) cases.

No new tests. This is covered by http/tests/xmlhttprequest/timeout
tests on ports that USE(CFNETWORK).

* platform/network/cf/ResourceErrorCF.cpp:
(WebCore::ResourceError::ResourceError):
* platform/network/mac/ResourceErrorMac.mm:
(WebCore::ResourceError::ResourceError):

Canonical link: https://commits.webkit.org/120425@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134702 268f45cc-cd09-0410-ab3c-d52691b4dbfc